GP stat! (c) David Fong, 2019

front-end to DailyMeasure package

Version 1.5.0, 9th February 2020
================================

New

* subscription features
*  reads subscription database (user-action, from user configuration panel)
*  CDM UI checks subscription status
*  user configuration displays license information
*  subscripton information can be added manually in user configuration
* updates date range dialog if dM$date_aR or dM$date_bR changes


Version 1.4.1, 22nd December 2019
=================================

Features

* modified module_Immunization to depend on dM$vaccine_choices to choose vaccines.
  (in effect, adds 'measles vaccine' to list of choices without
  explicitly adding 'measles' as a vaccine coice from within GPstat!)

* Conditions tab

  search for post-natal (or potentially post-natal) patients.
  Filtered by number of days post-natal, whether a 'visit' recorded by the
  selected physicians during the potential pregnancy period, and any
  recorded pregnancy outcome.

  Attached to appointments within the defined appointment search period.

Version 1.4.0, 12th November 2019
=================================

Features

* demonstration mode disables log file choosing/creation
* Data Quality tab - allergies and social history

Version 1.3.7, 5th November 2019
==================================

Features

* define host and port number in GPstat()
* multiple sessions can be opened. app does not stop until all sessions are closed
* demontration mode option in GPstat()

Bugfix

* remove 'Download' option/button from HTML view of Billings module


Version 1.3.6, 28th September 2019
==================================

Improvement/bugfix

* Added 'Invoiced' to contact_appointments types (reflects changes in dMeasure)

Version 1.3.5, 27th September 2019
==================================

Improvement

* round framingham risk equation results to 3 decimal places

Bug fixes

* COPD patients in QIM COPD appointments, instead of diabetic patients
